<resources>
    <string name="app_name">Calculator Java</string>
    <string name="result"></string>
    <string name="ac">AC</string>
    <string name="div">/</string>
    <string name="mul">*</string>
    <string name="sub">-</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="plus">+</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="equal">=</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>
    <string name="zero">0</string>
    <string name="dot">.</string>
</resources>